pxc/tests/test_003_interface/inh_match2.px
namespace inh_match2;
import common -;

interface ifoo {
  function void m() const;
}

struct foo < ifoo > {
  function void m() { println("foo"); } // error: constness
}

function void t1() {
  ptr{ifoo} p = to_ptr(foo());
  p->m();
}

t1();
